--- a/edit_rent_contract.html
+++ b/edit_rent_contract.html
@@ -506,7 +506,7 @@
                         <div class="col-12">
                             <div class="page-title-box d-flex align-items-center justify-content-between">
                                 <h4 class="mb-0">
-                                   تعديل عقد ايجار رقم 1233
+                                    تعديل بيان عقد رقم 123231
                                 </h4>
                             </div>
                         </div>
@@ -519,19 +519,139 @@
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="اسم الفرع ">
+                                            <input type="text" class="form-control" placeholder=" التاريخ ">
                                         </div>
                                     </div>  
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="تاريخ  بداية العقد ">
+                                            <input type="text" class="form-control" placeholder="  رقم العقد   ">
                                         </div>
                                     </div> 
 
                                     <div class="col-lg-6 col-12 mb-3">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="تاريخ نهاية العقد   ">
+                                            <input type="text" class="form-control" placeholder="  العميل   ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" فرع ">
+                                        </div>
+                                    </div>  
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" البائع ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="وصف التعاقد">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" جوال ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-12">
+                                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                                            <h4 class="mb-0">
+                                                المرحلة الأولى
+                                            </h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" التاريخ ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" فريق العمل ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-12">
+                                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                                            <h4 class="mb-0">
+                                                المرحلة الثانية
+                                            </h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" التاريخ ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" فريق العمل ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-12">
+                                        <div class="page-title-box d-flex align-items-center justify-content-between">
+                                            <h4 class="mb-0">
+                                                المرحلة الثالثة
+                                            </h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" التاريخ ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" فريق العمل ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" تاريخ التشغيل ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" مدة الصيانة  والضمان  ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" مدة الضمان  ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" تاريخ بداية الصيانه  ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" تاريخ نهاية الصيانه  ">
+                                        </div>
+                                    </div> 
+
+                                    <div class="col-lg-6 col-12 mb-3">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder=" ملاحظات  ">
                                         </div>
                                     </div> 
 
@@ -541,7 +661,7 @@
                                                 <i class="bx bx-plus float-right"></i>
         
                                                 <span class="d-sm-inline-block ml-2">
-                                                تعديل عقد
+                                                تعديل بيان عقد
                                                 </span>
                                             </button>
                                         </div>
