--- a/rent_list.html
+++ b/rent_list.html
@@ -515,7 +515,7 @@
                         <div class="col-12 mb-5">
                             <div class="page-title-box d-flex align-items-center justify-content-between">
                                 <h4 class="mb-0">
-                                    قائمة عقود الايجار
+                                    قائمة  بيان العقود
                                 </h4>
                             </div>
 
@@ -533,23 +533,88 @@
 
                         <div class="col-12">
                             <div class="card">
-                                <div class="card-body">
-                                    <table id="datatable-buttons" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <div class="card-body table-responsive">
+                                    <table class="table table-striped table-bordered" style="width: 100%; overflow-x: scroll;">
                                         <thead>
-                                            <tr>
+                                            <tr class="small-row">
                                                 <th>
                                                     #
                                                 </th>
+
                                                 <th>
-                                                    اسم الفرع
+                                                    التاريخ
                                                 </th>
 
                                                 <th>
-                                                    تاريخ بدايه العقد
+                                                    رقم العقد 
                                                 </th>
 
                                                 <th>
-                                                    تاريخ نهاية العقد
+                                                    العميل
+                                                </th>
+
+                                                <th>
+                                                    فرع
+                                                </th>
+
+                                                <th>
+                                                    البائع
+                                                </th>
+
+                                                <th>
+                                                    وصف التعاقد
+                                                </th>
+
+                                                <th>
+                                                    جوال
+                                                </th>
+
+                                                <th>
+                                                    تاريخ المرحلة الاولي
+                                                </th>
+
+                                                <th>
+                                                    فريق عمل المرحلة الاولي
+                                                </th>
+
+                                                <th>
+                                                    تاريخ المرحلة الثانية
+                                                </th>
+
+                                                <th>
+                                                    فريق عمل المرحلة الثانية
+                                                </th>
+
+                                                <th>
+                                                    تاريخ المرحلة الثالثة
+                                                </th>
+
+                                                <th>
+                                                    فريق عمل المرحلة الثالثة
+                                                </th>
+
+                                                <th>
+                                                    تاريخ التشغيل
+                                                </th>
+
+                                                <th>
+                                                    مدة الصيانة  
+                                                </th>
+
+                                                <th>
+                                                    مدة الضمان
+                                                </th>
+
+                                                <Th>
+                                                    تاريخ بداية الصيانه
+                                                </Th>
+
+                                                <th>
+                                                    تاريخ نهاية الصيانه
+                                                </th>
+
+                                                <th>
+                                                    ملاحظات
                                                 </th>
 
                                                 <th>
@@ -560,21 +625,85 @@
 
 
                                         <tbody>
-                                            <tr>
+                                            <tr  class="small-row">
                                                 <td>
                                                     1
                                                 </td>
                                                 
                                                 <td>
-                                                    فرع السعودية 
+                                                     20-12-2020
                                                 </td>
 
                                                 <td>
-                                                    20-2-2021 
+                                                    12213312
                                                 </td>
 
                                                 <td>
-                                                    20-2-2021
+                                                    محمد ابراهيم
+                                                </td>
+
+                                                <td>
+                                                    فرع جدة
+                                                </td>
+
+                                                <td>
+                                                    ابراهيم احمد
+                                                </td>
+
+                                                <td>
+                                                    تعاقد شهري
+                                                </td>
+
+                                                <td>
+                                                    123123
+                                                </td>
+
+                                                <td>
+                                                    12-12-2019
+                                                </td>
+
+                                                <td>
+                                                    اسم فريق العمل
+                                                </td>
+
+                                                <td>
+                                                    12-12-2019
+                                                </td>
+
+                                                <td>
+                                                    اسم فريق العمل
+                                                </td>
+
+                                                <td>
+                                                    12-12-2019
+                                                </td>
+
+                                                <td>
+                                                    اسم فريق العمل
+                                                </td>
+
+                                                <td>
+                                                    20-1-2020
+                                                </td>
+
+                                                <td>
+                                                    سنه
+                                                </td>
+
+                                                <td>
+                                                    سنه ونصف 
+                                                </td>
+
+                                                <td>
+                                                    20-1-2020
+                                                </td>
+
+                                                <td>
+                                                    20-1-2020
+                                                </td>
+                                                
+                                                <td>
+                                                    لا يوجد ملاحظات
                                                 </td>
 
                                                 <td>
